--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,13 +37,13 @@
 
   <ion-grid id="txTable">
     <ion-row>
-      <ion-col col-3 col-sm-2>
+      <ion-col col-2 col-sm-2>
         <h5>Time</h5>
       </ion-col>
       <ion-col col-0 col-sm-4 class="hidden-xs">
         <h5>Transaction ID</h5>
       </ion-col>
-      <ion-col col-6 col-sm-4>
+      <ion-col col-7 col-sm-4>
         <h5>From / To</h5>
       </ion-col>
       <ion-col col-3 col-sm-2>
@@ -68,23 +68,23 @@
                                                       itemsPerPage: numToDisplay,
                                                       currentPage: p,
                                                       totalItems: total }">
-      <ion-col col-3 col-sm-2>
-        {{transaction.date | date:'M/d/yy H:m'}}
+      <ion-col col-2 col-sm-2>
+        {{transaction.date | date:'M/d H:m'}}
       </ion-col>
       <ion-col col-0 col-sm-4 col-4 class="hidden-xs">
         {{transaction.id}}
       </ion-col>
-      <ion-col col-6 col-sm-4 *ngIf="transaction.recipientId != accountID && transaction.type == 0">    
+      <ion-col col-7 col-sm-4 *ngIf="transaction.recipientId != accountID && transaction.type == 0">    
         <span *ngIf="contacts.indexOf(transaction.recipientId) != -1">{{contactNames[contacts.indexOf(transaction.recipientId)]}}</span> 
         <span *ngIf="contacts.indexOf(transaction.recipientId) == -1">{{transaction.recipientId}} </span> 
         <ion-icon *ngIf="contacts.indexOf(transaction.recipientId) === -1" class="addContact" (click)="addContact(transaction.recipientId)" name="person-add"></ion-icon>
       </ion-col>
-      <ion-col col-6 col-sm-4 *ngIf="transaction.senderId != accountID  && transaction.type == 0">
+      <ion-col col-7 col-sm-4 *ngIf="transaction.senderId != accountID  && transaction.type == 0">
         <span *ngIf="contacts.indexOf(transaction.senderId) != -1">{{contactNames[contacts.indexOf(transaction.senderId)]}}</span> 
         <span *ngIf="contacts.indexOf(transaction.senderId) == -1">{{transaction.senderId}} </span> 
         <ion-icon *ngIf="contacts.indexOf(transaction.senderId) === -1" class="addContact" (click)="addContact(transaction.senderId)" name="person-add"></ion-icon>
       </ion-col>
-      <ion-col col-6 col-sm-4 *ngIf="transaction.type != 0">
+      <ion-col col-7 col-sm-4 *ngIf="transaction.type != 0">
         <span *ngIf="transaction.type == 1">Second Passphrase</span>
         <span *ngIf="transaction.type == 2">Delegate Registration</span>
         <span *ngIf="transaction.type == 3">Delegate Vote</span>
