--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,16 +9,19 @@
 		<img id="headerLogo" src="assets/headerLogo.png" />
 	</div>
 	<form [formGroup]="loginForm">
-		<ion-list>
+		<ion-list>			
 			<ion-item>
-				<ion-label stacked color="primary">Password</ion-label>
+				<ion-label stacked color="primary">{{loginLabel}}</ion-label>
 				<ion-icon name="lock"></ion-icon>
-				<ion-input [(ngModel)]="password" name="password" type="password" required formControlName="passwordForm" placeholder="Password">
+				<ion-input [(ngModel)]="password" name="password" type="{{loginType}}" required formControlName="passwordForm" placeholder="{{loginLabel}}">
 				</ion-input>
 				
 				<button id="qrIcon" ion-button clear color="dark" type="button" item-right (click)="openBarcodeScanner()"> <ion-icon name="barcode"> </ion-icon> </button>
 				<button id="fingerIcon" *ngIf="fingerAvailable === true" ion-button clear color="dark" type="button" item-right (click)="showFingerprint()"> <ion-icon name="finger-print"></ion-icon> </button>
 				
+				<button id="passwordButton" class="toggleButtons" [class.activeToggle]="passwordActive" ion-button clear color="dark" type="button" item-right (click)="toggleLogin('Password')"> <ion-icon name="key"> </ion-icon> </button>
+				<button id="accountButton" class="toggleButtons" [class.activeToggle]="accountActive" ion-button clear color="dark" type="button" item-right (click)="toggleLogin('Account')"> <ion-icon name="person"></ion-icon> </button>
+
 			</ion-item>
 			<ion-item *ngIf="fingerAvailable === true" id="savePasswordBox">
 				<ion-label>Save to Fingerprint for Account {{accountNum}}</ion-label>
