Better back button action
Don't always exit the app when using the back button, actually go back a page instead

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header id="delegateHeader">
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -20,8 +20,8 @@
 
 
 <ion-content padding>
-<h4>Lisk GDT Wallet created by MrV</h4>
-<h5>Sponsored by GDT</h5>
+<h4>Lisk GDT Wallet created by <a href="https://explorer.lisk.4miners.net/address/11380384760969655418L" target="_blank">MrV</a></h4>
+<h5>Sponsored by <a href="https://liskgdt.net" target="_blank">GDT</a></h5>
 
 <h6>Currency conversions provided by Cryptocompare & Coinmarketcap</h6>
 </ion-content>
