--- a/src/pages/delegate/delegate.html
+++ b/src/pages/delegate/delegate.html
@@ -1,5 +1,5 @@
 <ion-header id="delegateHeader">
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
