Show number of vote changes

--- a/src/pages/voting/voting.html
+++ b/src/pages/voting/voting.html
@@ -17,7 +17,7 @@
 <ion-grid>
 	<ion-row>
 		<ion-col col-4 col-sm-3>
-			<h3>Votes: {{votedDelegates.length-1}}/101</h3>
+			<h4>Votes: {{votedDelegates.length-1}}/101 (Δ{{updateVotesArray.length-1}})</h4>
 		</ion-col>
 		<ion-col col-8 col-sm-6>
 			<button ion-button (click)="voteGDT()" block >Vote all GDT</button>
