Open donation modal instead of explorer

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -20,7 +20,7 @@
 
 
 <ion-content padding>
-<h4>Lisk GDT Wallet created by <a href="https://explorer.lisk.4miners.net/address/11380384760969655418L" target="_blank">MrV</a></h4>
+<h4>Lisk GDT Wallet created by <a (click)="openModal('send')">MrV</a></h4>
 <h5>Sponsored by <a href="https://liskgdt.net" target="_blank">GDT</a></h5>
 
 <h6>Currency conversions provided by Cryptocompare & Coinmarketcap</h6>
