--- a/src/pages/delegate/delegate.html
+++ b/src/pages/delegate/delegate.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Delegate Page</ion-title>
+    <ion-title>Delegate</ion-title>
     <ion-buttons end>
       <button ion-button secondary (click)="logout()">
         <ion-icon name="power"></ion-icon>
