--- a/src/pages/voting/voting.html
+++ b/src/pages/voting/voting.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Voting Page</ion-title>
+    <ion-title>Voting</ion-title>
     <ion-buttons end>
       <button ion-button secondary (click)="logout()">
         <ion-icon name="power"></ion-icon>
