--- a/src/pages/delegate/delegate.html
+++ b/src/pages/delegate/delegate.html
@@ -14,5 +14,29 @@
 
 <ion-content padding>
 <h3 *ngIf="delegateInfo == null">Account is not a registered delegate.</h3>
-<h3 *ngIf="delegateInfo != null">{{delegateInfo['username']}}</h3>
+<h3 *ngIf="delegateInfo != null">Delegate name: {{delegateInfo['username']}}</h3>
+<ion-grid *ngIf="delegateInfo != null">
+  <ion-row>
+    <ion-col>
+      Rank: {{delegateInfo['rank']}}
+    </ion-col>
+    <ion-col>
+      Approval: {{delegateInfo['approval']}}%
+    </ion-col>
+    <ion-col>
+      Votes: {{ delegateInfo['vote'] / 100000000 | number }}
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+      Productivity: {{delegateInfo['productivity']}}%
+    </ion-col>
+    <ion-col>
+      Produced Blocks: {{ delegateInfo['producedblocks'] | number }}
+    </ion-col>
+    <ion-col>
+      Missed Blocks: {{ delegateInfo['missedblocks'] | number }}
+    </ion-col>
+  </ion-row>
+</ion-grid>
 </ion-content>
