--- a/src/pages/new-account/new-account.html
+++ b/src/pages/new-account/new-account.html
@@ -15,14 +15,14 @@
 
 <ion-content padding>
   <h6>Account:</h6> <h4>{{accountID}}</h4>
-  <h6>Password:</h6> <h4>{{passphrase}}</h4>
+  <h6>Password: <span style="color:red">(Do not lose! This cannot be recovered/reset.)</span></h6> <h4>{{passphrase}}</h4>
   <ngx-qrcode qrc-errorCorrectionLevel = "M" [qrc-value] = "accountID"></ngx-qrcode>
   <ion-row responsive-sm>
-    <ion-col>
+    <!-- <ion-col>
       <button ion-button color="secondary" (click)="save()" block>Download</button>
-    </ion-col>
+    </ion-col> -->
     <ion-col>
-      <button ion-button color="light" (click)="closeModal()" [disabled]="!saved" block>Close</button>
+      <button ion-button color="light" (click)="closeModal()" block>Close</button>
     </ion-col>
   </ion-row>
 </ion-content>
