--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,6 +17,7 @@
 				</ion-input>
 				
 				<button id="fingerIcon" *ngIf="fingerAvailable === true" ion-button clear color="dark" type="button" item-right (click)="openSelectAccount()"> <ion-icon name="finger-print"></ion-icon> </button>
+				<button id="pinIcon" *ngIf="cordovaAvailable === true" ion-button clear color="dark" type="button" item-right (click)="showPinDialog()"> <ion-icon name="grid"></ion-icon> </button>
 				<button id="qrIcon" ion-button clear color="dark" type="button" item-right (click)="openBarcodeScanner()"> <ion-icon name="barcode"> </ion-icon> </button>
 				
 				<button id="passwordButton" class="toggleButtons" [class.activeToggle]="passwordActive" ion-button clear color="dark" type="button" item-right (click)="toggleLogin('Password')"> <ion-icon name="key"> </ion-icon> </button>
