More work on Pin login
Still UI for setting pin and clearing it

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,16 +17,26 @@
 				</ion-input>
 				
 				<button id="fingerIcon" *ngIf="fingerAvailable === true" ion-button clear color="dark" type="button" item-right (click)="openSelectAccount()"> <ion-icon name="finger-print"></ion-icon> </button>
-				<button id="pinIcon" *ngIf="fingerAvailable !== true && cordovaAvailable === true" ion-button clear color="dark" type="button" item-right (click)="showPinDialog()"> <ion-icon name="grid"></ion-icon> </button>
+				<button id="pinIcon" *ngIf="fingerAvailable !== true && cordovaAvailable === true" ion-button clear color="dark" type="button" item-right (click)="openSelectAccount()"> <ion-icon name="grid"></ion-icon> </button>
 				<button id="qrIcon" ion-button clear color="dark" type="button" item-right (click)="openBarcodeScanner()"> <ion-icon name="barcode"> </ion-icon> </button>
 				
 				<button id="passwordButton" class="toggleButtons" [class.activeToggle]="passwordActive" ion-button clear color="dark" type="button" item-right (click)="toggleLogin('Password')"> <ion-icon name="key"> </ion-icon> </button>
 				<button id="accountButton" class="toggleButtons" [class.activeToggle]="accountActive" ion-button clear color="dark" type="button" item-right (click)="toggleLogin('Account')"> <ion-icon name="person"></ion-icon> </button>
 
 			</ion-item>
-			<ion-item style="display:none">			
-				<ion-label color="primary">Account to load for login: </ion-label>
+			<ion-item *ngIf="fingerAvailable === true" style="display:none">			
+				<ion-label color="primary">Account to load for Fingerprint: </ion-label>
 				<ion-select #selectAccount (ionChange)="showFingerprint()" [(ngModel)]="accountNum" formControlName="accountNumForm">
+			    <ion-option value="1">1</ion-option>
+			    <ion-option value="2">2</ion-option>
+			    <ion-option value="3">3</ion-option>
+			    <ion-option value="4">4</ion-option>
+			    <ion-option value="5">5</ion-option>
+			  </ion-select>
+			</ion-item>
+			<ion-item *ngIf="fingerAvailable !== true" style="display:none">			
+				<ion-label color="primary">Account to load for Pin: </ion-label>
+				<ion-select #selectAccount (ionChange)="showPinDialog()" [(ngModel)]="accountNum" formControlName="accountNumForm">
 			    <ion-option value="1">1</ion-option>
 			    <ion-option value="2">2</ion-option>
 			    <ion-option value="3">3</ion-option>
@@ -61,7 +71,7 @@
 				<button ion-button (click)="openModal('fingerprint')" block >Fingerprint Wizard</button>
 			</ion-col>
 			<ion-col *ngIf="fingerAvailable === false">
-				<button ion-button (click)="openModal('pin')" block >Pin Login Wizard</button>
+				<button ion-button (click)="openModal('fingerprint')" block >Pin Login Wizard</button>
 			</ion-col>
 			<ion-col>
 				<button ion-button (click)="openModal('newaccount')" block >Create New Account</button>
