--- a/src/pages/fingerprint-wizard/fingerprint-wizard.html
+++ b/src/pages/fingerprint-wizard/fingerprint-wizard.html
@@ -1,13 +1,7 @@
-<!--
-  Generated template for the FingerprintWizardPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Fingerprint Wizard</ion-title>
+    <ion-title>Login Wizard</ion-title>
   </ion-navbar>
 
 </ion-header>
